# HGPAKtool

./: .gitignore  HGPAKTool.bat  HGPAKTool.switch.bat  OodleCompressor.py  README.md  decompress.py  filename_hashes.json  hgpaktool.py  pyproject.toml  utils.py
.github/workflows/: pipeline.yml
HGPAKTool/: OodleCompressor.py  api.py  buffers.py  compressors.py  hgpaktool.py  oodle.py
hgpaktool/: __init__.py  api.py  buffers.py  cli.py  compressors.py  constants.py  os_funcs.py  utils.py
hgpaktool/lib/: README.md
tests/: test_pak.py  test_reading.py  test_repack.py  test_utils.py  utils.py
tests/data/: NMSARC.MeshPlanetSKY.invalid.pak  NMSARC.MeshPlanetSKY.mac.pak  NMSARC.MeshPlanetSKY.windows.pak  NMSARC.globals.mac.pak  NMSARC.globals.windows.pak
