[project]
name = "hgpaktool"
description = "Tool for extracting data from NMS pak files"
readme = "README.md"
requires-python = ">=3.9, <4"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["modding"]
authors = [
  {name = "monkeyman192"}
]
maintainers = [
  {name = "monkeyman192"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "zstandard",
    "lz4"
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-benchmark",
  "ruff",
  "setuptools_scm",
  "twine",
]

[project.optional-dependencies]
json5 = [
  "json5",
]

[tool.uv]
python-preference = "only-system"

[tool.setuptools.package-dir]
hgpaktool = "hgpaktool"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[project.urls]
homepage = "https://github.com/monkeyman192/HGPAKTool"
repository = "https://github.com/monkeyman192/HGPAKTool.git"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8", "setuptools_scm_git_semver"]
build-backend = "setuptools.build_meta"

[project.scripts]
hgpaktool = "hgpaktool.cli:run"
